# bam_reachability

./: .gitignore  .order  CMakeLists.txt  README.md  package.xml  pyproject.toml  pytest.ini
bam_reachability/: __init__.py  compare_maps.py  reachability_map.py  reachability_workspace.py  utils.py
bam_reachability/analysis/: compare_maps.py  load_analysis.py  map_tests.py  run_map_regression_test_v1.py  run_moveit_analysis.py  run_offset_wrist_analysis.py  run_reachability_test.py  run_workspace_analysis.py  ur_inconsistent_offset_wrist_map_13_jun_2025.pkl  ur_inconsistent_offset_wrist_map_14_jun_2025.pkl  ur_moveit_map_13_jun_2025.pkl  ur_offset_wrist_map_13_jun_2025.pkl
bam_reachability/generators/: DesignNotes.md  __init__.py  basic_shape_generators.py  generate_anchor_matrix.py  generator_viz.ipynb  point_generators.py  pose_generators.py  vector_generators.py  view_generators.py  vis_label.py
bam_reachability/kin_wrapper/: __init__.py  example_robot_kin_wrapper.py  kin_wrapper.py  mock_kin_wrapper.py  moveit_kin_wrapper.py  offset_wrist_kin_wrapper.py  pin_kin_wrapper.py  pin_kinematics.py
dev/: convex_hull.stl  dev.py  example_robot_links.py  offset_wrist_kin_wrapper.py  pin_kin_wrapper.py  pin_kinematics.ipynb  pin_panda.py  print_all_pin_methods_vars.py  test_pynput.py
examples/: create_and_viz_mock_map.py  create_map.py  viz_map.py
log/: latest_list
tests/: TeastPlan.md  test_colorize_map.py  test_compare_maps.py  test_ik_fk.py  test_mock_kin.py  test_moveit_kin.py  test_offset_wrist_kin.py  test_pin_kinematics.py  test_vector_generators.py
(+52 files in other folders)
